k8s/services/mattermost/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: mattermost
  hostnames:
    - chat.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: mattermost
          port: 80
      timeouts:
        request: 600s
